...
    <string name="threshold_alerts_threshold_value">Threshold</string>
    <string name="not_numeric_value_error">Value should be numeric!</string>
    <string name="daily_frequency">24 hours</string>
    <string name="hourly_frequency">1 hour</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="follow_button">follow</string>
    <string name="unfollow_button">unfollow</string>
    <string name="map_button">map</string>
    <string name="graph_button">graph</string>
    <string name="dashboard_empty_mobile_active_header">Start recording a mobile session</string>
    <string name="dashboard_empty_mobile_active_text">If you plan on moving around while recording measurements.</string>
    <string name="record_mobile_session">Record mobile session</string>

    <string name="disconnected_view_bluetooth_device_header">Measurement device\ndisconnected</string>
...
    <string name="power_on_bluetooth_device_desc">If using AirBeam2, wait for the connection indicator to change from red to green before continuing.</string>
    <string name="power_on_bluetooth_device_ready_button">Continue</string>
    <string name="power_on_bluetooth_device_image_desc">Power on your AirBeam</string>
    <!-- Fixed -->
    <string name="turn_on_airbeam_header">Power on your AirBeam</string>
    <string name="turn_on_airbeam_description">If using AirBeam2, wait for the connection indicator to change from red to green before continuing.</string>
    <string name="turn_on_airbeam_ready_button">Continue</string>
    <string name="turn_on_airbeam_image_desc">Power on your AirBeam</string>

    <!-- New session Step 4 -->
    <string name="select_device_type_header">What device are you using to record this session?</string>
    <string name="bluetooth_device_card_header">Bluetooth device</string>
    <string name="bluetooth_device_card_body">for example AirBeam</string>
...
    <string name="connecting_airbeam_header">Connecting</string>
    <string name="connecting_image_desc">Connecting</string>
    <string name="connecting_airbeam_description">This should take less than 10 seconds.</string>
    <string name="airbeam2">AirBeam2</string>

    <!--  New session Step 7 - Connected -->
    <string name="airbeam_connected_header">AirBeam connected</string>
    <string name="airbeam_connected_image_desc">AirBeam connected</string>
    <string name="airbeam_connected_description">Your AirBeam is connected to your phone and ready to take some measurements.</string>
    <string name="airbeam_connected_continue_button">Continue</string>

    <!-- Turn off location services -->
    <string name="turn_off">Turn off</string>
    <string name="turn_off_location_description_text">You can turn off location services now</string>
    <string name="turn_off_location_services">Turn off location services</string>
    <string name="turn_off_location_services_image_desc">Turn off location services</string>
...
