...
        android:layout_marginEnd="@dimen/keyline_8"
        android:hint="@string/session_details_network_password_hint"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/wifi_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/session_details_network_password_hint"
            android:importantForAutofill="yes"
            android:inputType="textPassword"
...
            android:textAppearance="@style/TextAppearance.Aircasting.TextInput.Text"
            android:textColor="@color/aircasting_grey_700" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/keyline_8"
        android:layout_marginTop="@dimen/keyline_6"
        android:layout_marginEnd="@dimen/keyline_8"
        android:text="@string/ok" />
...
